--- a/styles/architect.css
+++ b/styles/architect.css
@@ -1,11 +1,23 @@
 /* google work sans font */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Merriweather:wght@400;700;900&family=Open+Sans:wght@700&family=Work+Sans:wght@400;500;600;700;800&display=swap');
+/* shared styles */
 
 * {
     font-family: 'Inter', sans-serif;
     font-family: 'Merriweather', serif;
     font-family: 'Open Sans', sans-serif;
     font-family: 'Work Sans', sans-serif;
+}
+
+.btn-primary {
+    color: #FFF;
+    font-size: 1.23rem;
+    font-weight: 600;
+    border: 0;
+    border-radius: 8px;
+    background: #FF900E;
+    padding: 20px 25px;
+    cursor: pointer;
 }
 
 /* header styles */
@@ -60,4 +72,33 @@ nav li a {
     color: #727272;
     font-size: 1rem;
     font-weight: 400;
+}
+
+.banner img {
+    width: 100%;
+    margin-top: 20px;
+}
+
+/* responsive media queries */
+/* mobile view */
+@media screen and (max-width: 576px) {
+    header {
+        padding: 20px;
+    }
+
+    nav {
+        flex-direction: column;
+    }
+
+}
+
+/* table or medium devices styles */
+@media screen and (min-width: 577px) and (max-width: 992px) {
+    header {
+        padding: 50px;
+    }
+
+    nav {
+        flex-direction: column;
+    }
 }
