--- a/styles/architect.css
+++ b/styles/architect.css
@@ -27,6 +27,12 @@
     font-weight: 400;
 }
 
+.section-title {
+    color: #131313;
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+
 /* header styles */
 header {
     background: rgba(255, 144, 14, 0.10);
@@ -37,12 +43,6 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-.nav-title {
-    color: #131313;
-    font-size: 2.8rem;
-    font-weight: 700;
 }
 
 nav>ul {
@@ -134,6 +134,32 @@ main {
     font-weight: 700;
 }
 
+/* fact section styles */
+.facts-card-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.facts-card-container .card-title {
+    color: #727272;
+    font-size: 1.02rem;
+    font-weight: 600px;
+    margin-top: 5px;
+}
+
+.facts-card-container .card {
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding: 30px;
+}
+
+.facts-card-container .card-stats {
+    font-size: 2.8rem;
+    color: #424242;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
 
 /* responsive media queries */
 /* mobile view */
